--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SakuriDBConnection": "Server=127.0.0.1;Port=5432;Database=sakuridb;User Id=scouri;Password='K3qingWaifu'"
+    "SakuriDBConnection": "SakuriDBConnection"
   },
   "Logging": {
     "LogLevel": {
@@ -9,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+  
 }
